* bignum.c (rb_big_divide): raise ZeroDivisionError if divisor is   zero, as well as Fixnum.  [ruby-core:40429] [Bug #5490]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33536 b2dd03c8-39d4-4d8f-98ff-823fe69b080e