test/ruby/test_bignum.rb
@@ -272,6 +272,9 @@ class TestBignum < Test::Unit::TestCase
     assert_equal(T32.to_f, T32 / 1.0)
     assert_raise(TypeError) { T32 / "foo" }
     assert_equal(0x20000000, 0x40000001.div(2.0), "[ruby-dev:34553]")
+    bug5490 = '[ruby-core:40429]'
+    assert_raise(ZeroDivisionError, bug5490) {T1024.div(0)}
+    assert_raise(ZeroDivisionError, bug5490) {T1024.div(0.0)}
   end
 
   def test_idiv
